--- a/clicker_style.css
+++ b/clicker_style.css
@@ -72,7 +72,8 @@
 }
 
 .body .info,
-.body .score {
+.body .score,
+.body .sum {
     margin: 10px auto;
     width: fit-content;
     height: auto;
