--- a/clicker_style.css
+++ b/clicker_style.css
@@ -91,6 +91,9 @@
 }
 
 .body .field .block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: 1px solid black;
     border-radius: 50%;
     margin: 1px;
